# EIP_xxxx

./: LICENSE  hardhat.config.js  package.json
.github/workflows/: ci.yml
EIPS/: EIP-xxxx.md
contracts/: MockVerifier.sol  README.md  ReferenceGroth16Verifier.sol  VerifierWrapper.sol
docs/: CIRCUIT_SPEC.md
go/precompile/: INTEGRATE.md  README.md  go.mod  zktx_precompile.go  zktx_verifier.go  zktx_verifier_test.go
go/precompile/geth_integration/: 0001-register-zktx-precompile.patch  README.md  apply_patch.sh
go/precompile/geth_pr/: 0001-register-zktx-precompile.patch  apply_pr.sh
go/precompile/geth_pr/consensus_integration/: 0002-validate-zktx-in-headers.patch  README.md  shadow_fork_test.sh
go/precompile/geth_pr/core/precompiled/zktx/: zktx_precompile.go  zktx_verifier.go
proto/: Cargo.toml  README.md
proto/src/: circuit.rs  main.rs  prover.rs  runner.rs
test/: verifier.test.js
zksnark_examples/: input.json
zksnark_examples/circuits/: simple.circom
zksnark_examples/scripts/: generate_groth16.sh  parse_vk.js
